2-6: overflow problem fixed.

--- a/2-6/2-6.css
+++ b/2-6/2-6.css
@@ -1,7 +1,7 @@
 html,body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .slide{
     position: fixed;
@@ -51,7 +51,7 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 0.7rem 1rem;
+    padding: 0.9rem 2rem;
     transform: translate(-50%, -50%);
 }
 #blue-div button:hover{
@@ -117,11 +117,11 @@ table{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 85%;
+    width:89rem;
 }
 .desc{
     color: white;
 }
 img{
-    width: 37rem;
+    width: 47rem;
 }
